basic structure initiated

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -39,7 +40,17 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-secondary: #242424;
+  --color-primary: #000000;
+  --color-purple-69: #d358f5;
+  --color-white-light: #bdbdbd;
+  --color-white-mid: #949292;
+  --color-white-dark: #696969;
+  --color-white-darker: #2e2e2e;
 
+  --font-playfair: "Playfair Display", sans-serif;
+  --font-outfit: "Outfit", sans-serif;
+  --font-nunito: "Nunito", sans-serif;
 }
 
 :root {
@@ -75,13 +86,6 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-
-  --color-secondary: #242424;
-  --color-primary: #000000;
-  --color-purple-69: #d358f5;
-  --color-white-light: #bdbdbd;
-  --color-white-mid: #949292;
-  --color-white-dark: #696969;
 }
 
 .dark {
@@ -126,3 +130,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  text-decoration: none;
+} */
